--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/SafeBite-V1/favicon.svg" />
+    <link rel="icon" type="image/png" href="/SafeBite-V1/favicon.png" />
     <title>SafeBite - Make Informed Food Choices</title>
     <meta name="description" content="SafeBite helps you make informed food choices. Track nutrition, receive food safety alerts, and get personalized recommendations." />
     <meta name="author" content="SafeBite" />
